📚 Auto-update: News data refreshed - 2025-12-30 13:30 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -33118,5 +33118,77 @@
         "published": "Tue, 30 Dec 2025 11:54:16 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>The Central Consumer Protection Authority (CCPA) has found Zepto violating MRP and dark patterns rules. Read on to know how the consumer protection authority brought in MRP-related violations.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-explained-zepto-checkout-design-flouting-mrp-dark-pattern-rules-ccpa-probe/\">Explained: Why Zepto\u2019s Checkout Design Was Found Flouting MRP and Dark Pattern Rules In CCPA Probe</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANA"
+    },
+    {
+        "id": "https://www.theverge.com/policy/849841/trump-immigration-social-media-free-speech",
+        "title": "Free speech\u2019s great leap backwards",
+        "link": "https://www.theverge.com/policy/849841/trump-immigration-social-media-free-speech",
+        "published": "2025-12-30T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "In early December, Joshua Aaron, the developer behind the ICEBlock app - designed to let people alert others about the presence of Immigration and Customs Enforcement (ICE) agents - filed a federal lawsuit alleging his First Amendment rights were violated. The Department of Justice had urged Apple to remove Aaron's app from its App Store, [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/commodore-64-ultimate/",
+        "title": "Commodore 64 Ultimate Review: An Astonishing Remake",
+        "link": "https://www.wired.com/review/commodore-64-ultimate/",
+        "published": "Tue, 30 Dec 2025 12:30:00 +0000",
+        "source": "WIRED",
+        "summary": "The reborn Commodore 64 is an astonishing remake\u2014but daunting if you weren\u2019t there the first time around."
+    },
+    {
+        "id": "https://www.engadget.com/computing/how-to-watch-the-nvidia-ces-2026-presentation-live-130028065.html?src=rss",
+        "title": "How to watch the NVIDIA CES 2026 presentation live",
+        "link": "https://www.engadget.com/computing/how-to-watch-the-nvidia-ces-2026-presentation-live-130028065.html?src=rss",
+        "published": "Tue, 30 Dec 2025 13:00:28 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<figure><img alt=\"NVIDIA AI Computing Card \" src=\"https://s.yimg.com/os/creatr-uploaded-images/2025-12/b0333b00-dcee-11f0-a993-97c527ebca4b\" style=\"height: 4000px; width: 6000px;\" /><figcaption>CFOTO via Getty Images</figcaption></figure>\n<p>At CES 2025, NVIDIA spent the bulk of its presentation touting (what else) its leading position in the artificial intelligence arena. But it also spent time talking up new hardware, including <a href=\"https://www.engadget.com/ai/everything-nvidia-ceo-jensen-"
+    },
+    {
+        "id": "https://hsu.cy/2025/12/times-new-american/",
+        "title": "Calibri Wasn't Fit for the State Department; Neither Is Times New Roman",
+        "link": "https://hsu.cy/2025/12/times-new-american/",
+        "published": "Tue, 30 Dec 2025 12:56:07 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46432862\">Comments</a>"
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/creators-gain-ground-as-audiences-distrust-ai-driven-content-report/articleshow/126253118.cms",
+        "title": "Creators gain ground as audiences distrust AI-driven content: Report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/creators-gain-ground-as-audiences-distrust-ai-driven-content-report/articleshow/126253118.cms",
+        "published": "Tue, 30 Dec 2025 18:22:21 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "To build a creator-follower relationship, some creators are putting out artificial intelligence-led low-effort content, while others are opting for more authentic manmade creatives, said a TechCrunch report quoting industry executives. The report added that trust in creators has increased 21% year-on-year."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/white-paper-signals-push-to-build-ai-on-dpi-rails-democratise-compute-access/articleshow/126252677.cms",
+        "title": "White paper signals push to build AI on DPI rails, democratise compute access",
+        "link": "https://economictimes.indiatimes.com/tech/technology/white-paper-signals-push-to-build-ai-on-dpi-rails-democratise-compute-access/articleshow/126252677.cms",
+        "published": "Tue, 30 Dec 2025 18:03:36 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The white paper was developed through consultations with domain experts and key stakeholders, including the NITI Aayog, with the aim of providing direction to India\u2019s AI policy and governance framework. The paper signalled a push towards extending the government\u2019s Digital Public Infrastructure (DPI) model to AI, seeking to platformise AI access, instead of owning AI systems."
+    },
+    {
+        "id": "https://inc42.com/features/akanksha-vishnoi-on-yes-madams-operating-model-and-path-to-profitability/",
+        "title": "Akanksha Vishnoi On Yes Madam\u2019s Operating Model And Path To Profitability",
+        "link": "https://inc42.com/features/akanksha-vishnoi-on-yes-madams-operating-model-and-path-to-profitability/",
+        "published": "Tue, 30 Dec 2025 13:29:10 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Akanksha Vishnoi On Yes Madam Operating Model And Path To Profitability\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ftr-yes-madam.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />The rush of city mornings, work pressure throughout the day and evening fatigue leave little room for self-care. For new-age&#8230;"
+    },
+    {
+        "id": "https://inc42.com/buzz/atomberg-trims-fy25-loss-by-41-to-inr-117-cr/",
+        "title": "Atomberg Trims FY25 Loss By 41% To INR 117 Cr",
+        "link": "https://inc42.com/buzz/atomberg-trims-fy25-loss-by-41-to-inr-117-cr/",
+        "published": "Tue, 30 Dec 2025 12:36:03 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"Atomberg Trims FY25 Loss by 41% to INR 117 Cr\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2025/12/ftr.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Home appliances startup Atomberg narrowed its consolidated net loss by 41% to INR 117.4 Cr in the financial year 2024-25&#8230;"
+    },
+    {
+        "id": "https://www.medianama.com/2025/12/223-cards-internet-fraud-66-in-fy25-decline-banking-rbi/",
+        "title": "Cards & Internet Fraud Made Up 66% Of Cases In FY25 Amid Decline in Banking Fraud: RBI Data",
+        "link": "https://www.medianama.com/2025/12/223-cards-internet-fraud-66-in-fy25-decline-banking-rbi/",
+        "published": "Tue, 30 Dec 2025 12:34:03 +0000",
+        "source": "MEDIANAMA",
+        "summary": "<p>Although banking frauds have gone down 67.3% in 2024-25, it might not suggest improvement, as RBI data shows a shift towards digital scams, with two-thirds of cases involving cards.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-cards-internet-fraud-66-in-fy25-decline-banking-rbi/\">Cards &amp; Internet Fraud Made Up 66% Of Cases In FY25 Amid Decline in Banking Fraud: RBI Data</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
     }
 ]
