📚 Auto-update: News data refreshed - 2025-12-30 14:12 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -33190,5 +33190,77 @@
         "published": "Tue, 30 Dec 2025 12:34:03 +0000",
         "source": "MEDIANAMA",
         "summary": "<p>Although banking frauds have gone down 67.3% in 2024-25, it might not suggest improvement, as RBI data shows a shift towards digital scams, with two-thirds of cases involving cards.</p>\n<p>The post <a href=\"https://www.medianama.com/2025/12/223-cards-internet-fraud-66-in-fy25-decline-banking-rbi/\">Cards &amp; Internet Fraud Made Up 66% Of Cases In FY25 Amid Decline in Banking Fraud: RBI Data</a> appeared first on <a href=\"https://www.medianama.com\">MEDIANAMA</a>.</p>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/30/heres-whats-you-should-know-about-the-us-tiktok-deal/",
+        "title": "Here\u2019s what you should know about the US TikTok deal",
+        "link": "https://techcrunch.com/2025/12/30/heres-whats-you-should-know-about-the-us-tiktok-deal/",
+        "published": "Tue, 30 Dec 2025 14:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "A number of investors are competing for the opportunity to purchase the app, and if a deal were to go through, the platform's U.S. business could have its valuation soar to upward of $60 billion."
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/850602/canon-eos-r6-mark-iii-rf-45mm-12-camera-lens-impressions-review",
+        "title": "The Canon EOS R6 Mark III is great, but this lens is amazing",
+        "link": "https://www.theverge.com/gadgets/850602/canon-eos-r6-mark-iii-rf-45mm-12-camera-lens-impressions-review",
+        "published": "2025-12-30T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Canon's new EOS R6 Mark III is an excellent camera. It's not a groundbreaking upgrade to the 3-year-old R6 Mark II, but it takes the same body with great ergonomics and adds more resolution, video that now goes up to 7K with open-gate filming, and improved autofocus performance. If you're in need of an impeccably [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/cars/2025/12/the-10-best-vehicles-ars-technica-drove-in-2025/",
+        "title": "The 10 best vehicles Ars Technica drove in 2025",
+        "link": "https://arstechnica.com/cars/2025/12/the-10-best-vehicles-ars-technica-drove-in-2025/",
+        "published": "Tue, 30 Dec 2025 13:30:40 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Of all the cars we've driven and reviewed this year, these are our picks."
+    },
+    {
+        "id": "https://www.engadget.com/ai/meta-buys-startup-known-for-its-ai-task-automation-agents-140045275.html?src=rss",
+        "title": "Meta buys startup known for its AI task automation agents",
+        "link": "https://www.engadget.com/ai/meta-buys-startup-known-for-its-ai-task-automation-agents-140045275.html?src=rss",
+        "published": "Tue, 30 Dec 2025 14:00:45 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Meta has acquired an AI startup called Manus \u2014 known for its custom research and website-building agents \u2014 in a deal valued at more than $2 billion, according to<a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=2f007401-3eaa-4237-b69b-54ccbe125502&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=35d389ba-b56d-4881-a576-2b009dd12336&amp;featureId=text-link&amp;merchantName=The+Wall+Street+Journal&amp;linkText=The+Wall+Street+Journal&amp;custData=eyJzb3"
+    },
+    {
+        "id": "https://www.engadget.com/mobile/tablets/tcl-introduces-its-own-take-on-a-color-kindle-scribe-140000207.html?src=rss",
+        "title": "TCL introduces its own take on a color Kindle Scribe",
+        "link": "https://www.engadget.com/mobile/tablets/tcl-introduces-its-own-take-on-a-color-kindle-scribe-140000207.html?src=rss",
+        "published": "Tue, 30 Dec 2025 14:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Hot on the tail of Amazon's <a class=\"link\" href=\"https://www.engadget.com/mobile/tablets/kindle-scribe-colorsoft-review-a-very-particular-set-of-skills-for-a-price-140014961.html\" target=\"_blank\">Kindle Scribe Colorosoft</a>, TCL is introducing its own take on a distraction-free note-taking and reading device. Unlike the new Scribe, however, it doesn't use E Ink. The TCL Note A1 NXTPAPER is the company's latest device to use <a class=\"link\" href=\"https://www.engadget.com/tcl-nxtpaper-tablet-"
+    },
+    {
+        "id": "https://subseacables.blogspot.com/2025/12/the-british-empires-resilient-subsea.html",
+        "title": "The British Empire's Resilient Subsea Telegraph Network",
+        "link": "https://subseacables.blogspot.com/2025/12/the-british-empires-resilient-subsea.html",
+        "published": "Tue, 30 Dec 2025 13:10:56 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46432999\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/tcl-note-a1-nxtpaper/",
+        "title": "TCL's latest E Ink tablet gives you a full-color screen - without this one big compromise",
+        "link": "https://www.zdnet.com/article/tcl-note-a1-nxtpaper/",
+        "published": "Tue, 30 Dec 2025 14:00:00 GMT",
+        "source": "Latest news",
+        "summary": "TCL's Note A1 Nxtpaper tablet will feature a full-color display at 120Hz while retaining the digital paper experience."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/blinkit-cfo-vipin-kapooria-resigns",
+        "title": "Blinkit CFO Vipin Kapooria resigns",
+        "link": "https://yourstory.com/2025/12/blinkit-cfo-vipin-kapooria-resigns",
+        "published": "Tue, 30 Dec 2025 08:20:16 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Kapooria's resignation comes at a time when competition in quick commerce space has intensified, and a few days after rival Zepto filed preliminary papers to raise Rs 11,000 crore through an IPO."
+    },
+    {
+        "id": "https://inc42.com/buzz/culture-circle-posts-inr-3-4-cr-revenue-in-fy25/",
+        "title": "Culture Circle Posts INR 3.4 Cr Revenue In FY25",
+        "link": "https://inc42.com/buzz/culture-circle-posts-inr-3-4-cr-revenue-in-fy25/",
+        "published": "Tue, 30 Dec 2025 13:59:39 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/12/Culturecircle_FTR.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Fashion ecommerce marketplace Culture Circle posted a revenue of INR 3.4 Cr in the financial year 2024-25 (FY25), up 10X&#8230;"
     }
 ]
