--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -33262,5 +33262,69 @@
         "published": "Tue, 30 Dec 2025 13:59:39 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2024/12/Culturecircle_FTR.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Fashion ecommerce marketplace Culture Circle posted a revenue of INR 3.4 Cr in the financial year 2024-25 (FY25), up 10X&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/30/the-top-26-consumer-edtech-companies-from-disrupt-startup-battlefield/",
+        "title": "The top 26 consumer/edtech companies from Disrupt Startup Battlefield",
+        "link": "https://techcrunch.com/2025/12/30/the-top-26-consumer-edtech-companies-from-disrupt-startup-battlefield/",
+        "published": "Tue, 30 Dec 2025 15:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Here is the full list of the consumer/edtech Startup Battlefield 200 selectees, along with a note on what made us select them for the competition."
+    },
+    {
+        "id": "https://www.theverge.com/tech/850224/gardyn-studio-2-review-smart-indoor-garden",
+        "title": "This smart garden turned my black thumb green",
+        "link": "https://www.theverge.com/tech/850224/gardyn-studio-2-review-smart-indoor-garden",
+        "published": "2025-12-30T10:00:00-05:00",
+        "source": "The Verge",
+        "summary": "I can't grow anything. Multiple attempts to create a cottage garden, first in Idaho and now in South Carolina, have brought disappointment. Both are challenging climates, but where others have succeeded, I've been left with little more than a pile of cherry tomatoes for my vast efforts (those things are bulletproof). I'd all but given [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/health/2025/12/the-top-5-most-horrifying-and-fascinating-medical-cases-of-2025/",
+        "title": "The top 5 most horrifying and fascinating medical cases of 2025",
+        "link": "https://arstechnica.com/health/2025/12/the-top-5-most-horrifying-and-fascinating-medical-cases-of-2025/",
+        "published": "Tue, 30 Dec 2025 14:00:27 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Florida man makes two appearances on the list."
+    },
+    {
+        "id": "https://public-sans.digital.gov/",
+        "title": "Public Sans \u2013 A strong, neutral typeface",
+        "link": "https://public-sans.digital.gov/",
+        "published": "Tue, 30 Dec 2025 14:23:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46433579\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/lg-gallery-tv-samsung-frame-competitor/",
+        "title": "Want the Samsung Frame TV? A major competitor just announced its own version",
+        "link": "https://www.zdnet.com/article/lg-gallery-tv-samsung-frame-competitor/",
+        "published": "Tue, 30 Dec 2025 14:45:30 GMT",
+        "source": "Latest news",
+        "summary": "It has magnetic frames and a special 'Gallery Mode' that was developed with museum curators."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/gig-workers-dec-31-strike-threat-pushes-delivery-apps-to-dangle-incentives-rewards/articleshow/126254820.cms",
+        "title": "Gig workers\u2019 Dec 31 strike threat pushes delivery apps to dangle incentives, rewards",
+        "link": "https://economictimes.indiatimes.com/tech/technology/gig-workers-dec-31-strike-threat-pushes-delivery-apps-to-dangle-incentives-rewards/articleshow/126254820.cms",
+        "published": "Tue, 30 Dec 2025 20:18:38 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "The planned strike by about 100,000-150,000 riders could cause operational disruptions and impact business on one of the busiest days for these companies, which have reported record high orders for the past two years on New Year\u2019s eve."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/musk-in-2025-political-backlash-trump-tensions-business-focus/articleshow/126254609.cms",
+        "title": "Musk in 2025: Political backlash, Trump tensions, &amp; business focus",
+        "link": "https://economictimes.indiatimes.com/tech/technology/musk-in-2025-political-backlash-trump-tensions-business-focus/articleshow/126254609.cms",
+        "published": "Tue, 30 Dec 2025 20:08:52 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "In 2025, given the public anger during his time at the Department of Government Efficiency (DOGE), Musk took a step back and refocussed on his businesses. Musk made headlines by moving up his timeline for AGI. He now predicts that AI will be \"smarter than any single human at anything\" by late 2026. According to reports, xAI will launch Grok 5 in early 2026, powered by the fully operational \"Colossus 2\" supercomputer cluster."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/softbank-has-fully-funded-its-40-billion-investment-in-openai-cnbc-reports/articleshow/126254440.cms",
+        "title": "SoftBank has fully funded its $40 billion investment in OpenAI: Report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/softbank-has-fully-funded-its-40-billion-investment-in-openai-cnbc-reports/articleshow/126254440.cms",
+        "published": "Tue, 30 Dec 2025 19:47:42 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "SoftBank \u2060Group has fully \u200cfunded \u200cits $40 \u200cbillion investment in \u200bOpenAI. In early \u200b2025, SoftBank agreed to \u200clead \u200da funding round of \u200dup to $40 billion in OpenAI, \u200cin a deal that would make it one of the biggest private tech investments ever."
     }
 ]
