📚 Auto-update: News data refreshed - 2025-12-30 16:14 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -33326,5 +33326,109 @@
         "published": "Tue, 30 Dec 2025 19:47:42 +0530",
         "source": "Tech-Economic Times",
         "summary": "SoftBank \u2060Group has fully \u200cfunded \u200cits $40 \u200cbillion investment in \u200bOpenAI. In early \u200b2025, SoftBank agreed to \u200clead \u200da funding round of \u200dup to $40 billion in OpenAI, \u200cin a deal that would make it one of the biggest private tech investments ever."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/30/the-best-ai-powered-dictation-apps-of-2025/",
+        "title": "The best AI-powered dictation apps of 2025",
+        "link": "https://techcrunch.com/2025/12/30/the-best-ai-powered-dictation-apps-of-2025/",
+        "published": "Tue, 30 Dec 2025 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "AI-powered dictation apps are useful for replying to emails, taking notes, and even coding through your voice"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/30/vcs-predict-enterprises-will-spend-more-on-ai-in-2026-through-fewer-vendors/",
+        "title": "VCs predict enterprises will spend more on AI in 2026\u00a0\u2014\u00a0through\u00a0fewer vendors",
+        "link": "https://techcrunch.com/2025/12/30/vcs-predict-enterprises-will-spend-more-on-ai-in-2026-through-fewer-vendors/",
+        "published": "Tue, 30 Dec 2025 15:30:24 +0000",
+        "source": "TechCrunch",
+        "summary": "Enterprises have been experimenting with AI tools for a few years. Investors predict they will start to pick winners in 2026."
+    },
+    {
+        "id": "https://www.theverge.com/news/851259/gamesir-switch-turbo-drive-controller-steering-wheel-wireless-force-feedback",
+        "title": "GameSir put a tiny force feedback steering wheel on its new Swift Drive controller",
+        "link": "https://www.theverge.com/news/851259/gamesir-switch-turbo-drive-controller-steering-wheel-wireless-force-feedback",
+        "published": "2025-12-30T10:59:41-05:00",
+        "source": "The Verge",
+        "summary": "GameSir is no stranger to experimenting with unique controller features - its Tarantula Pro can automatically swap its face button labels to accommodate alternate layouts, and its Pocket 1 clamps Game Boy controls onto your phone. What sets its new Swift Drive controller apart is a small steering wheel located smack-dab in the middle of [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/851016/anker-521-powerhouse-google-tv-streamer-4k-deal-sale",
+        "title": "Anker\u2019s portable backup battery is an even better investment now that it\u2019s nearly half off",
+        "link": "https://www.theverge.com/gadgets/851016/anker-521-powerhouse-google-tv-streamer-4k-deal-sale",
+        "published": "2025-12-30T10:47:34-05:00",
+        "source": "The Verge",
+        "summary": "Winter storms across the country are bringing heavy snow, rain, and \u2014 in some cases, as this Californian who briefly lost power a few days ago can attest \u2014 outages. If you want to prepare, Anker\u2019s 521 PowerHouse can help keep your essential devices running and it\u2019s on sale for $129.99 ($120 off) at Amazon. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/news/851271/cyber-trust-mark-program-lead-administrator-withdraws",
+        "title": "The FCC has probably killed a plan to improve smart home security",
+        "link": "https://www.theverge.com/news/851271/cyber-trust-mark-program-lead-administrator-withdraws",
+        "published": "2025-12-30T10:47:09-05:00",
+        "source": "The Verge",
+        "summary": "The US Cyber Trust Mark Program, an Energy Star-style certification for smart home security, could be winding down less than a year after it launched. Safety testing company UL Solutions has announced that it is stepping down as the program's lead administrator, just a few months after the Federal Communications Commission (FCC) began investigating it [&#8230;]"
+    },
+    {
+        "id": "https://arstechnica.com/science/2025/12/looking-for-friends-lobsters-may-stumble-into-an-ecological-trap/",
+        "title": "Looking for friends, lobsters may stumble into an ecological trap",
+        "link": "https://arstechnica.com/science/2025/12/looking-for-friends-lobsters-may-stumble-into-an-ecological-trap/",
+        "published": "Tue, 30 Dec 2025 15:00:56 +0000",
+        "source": "Ars Technica - All content",
+        "summary": "Gathering for mutual defense puts young spiny lobsters at risk of predators."
+    },
+    {
+        "id": "https://github.com/timescale/pgvectorscale",
+        "title": "Postgres extension complements pgvector for performance and scale",
+        "link": "https://github.com/timescale/pgvectorscale",
+        "published": "Wed, 24 Dec 2025 22:04:57 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46379765\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/aflect-data-breach-free-credit-monitoring-protection/",
+        "title": "Massive Aflac breach exposed millions of SSNs and other data - get free protection today",
+        "link": "https://www.zdnet.com/article/aflect-data-breach-free-credit-monitoring-protection/",
+        "published": "Tue, 30 Dec 2025 15:34:56 GMT",
+        "source": "Latest news",
+        "summary": "Attackers stole a trove of sensitive data, including names, contact details, and health information. Affected customers can enroll for free protection by April 18."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-google-oneplus-phone-battery-comparison/",
+        "title": "I ran a battery test with the best Samsung, Google, and OnePlus phones - the winner surprised me",
+        "link": "https://www.zdnet.com/article/samsung-google-oneplus-phone-battery-comparison/",
+        "published": "Tue, 30 Dec 2025 15:30:00 GMT",
+        "source": "Latest news",
+        "summary": "Among this year's top-performing Android phones, here's the model that lasted the longest in my endurance tests."
+    },
+    {
+        "id": "https://www.zdnet.com/article/tuxedo-computers-infinitybook-14-pro-review/",
+        "title": "Ready for a Linux laptop? I found one that competes with my MacBook Pro",
+        "link": "https://www.zdnet.com/article/tuxedo-computers-infinitybook-14-pro-review/",
+        "published": "Tue, 30 Dec 2025 15:17:00 GMT",
+        "source": "Latest news",
+        "summary": "Tuxedo Computers' InfinityBook 14 Pro runs Tuxedo Linux, based on Ubuntu."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-phone-connectivity-labs-settings/",
+        "title": "Your Samsung phone has a secret Wi-Fi menu that's highly useful - here's how to enable it",
+        "link": "https://www.zdnet.com/article/samsung-phone-connectivity-labs-settings/",
+        "published": "Tue, 30 Dec 2025 15:15:00 GMT",
+        "source": "Latest news",
+        "summary": "If you love Samsung's feature-packed software, this OneUI tool is your next rabbit hole to explore."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsungs-wi-fi-speakers-soundbars-ces-2026/",
+        "title": "Samsung's new Wi-Fi speakers may be the sleeper hit for audio at CES 2026 - here's why",
+        "link": "https://www.zdnet.com/article/samsungs-wi-fi-speakers-soundbars-ces-2026/",
+        "published": "Tue, 30 Dec 2025 15:14:00 GMT",
+        "source": "Latest news",
+        "summary": "Alongside a new flagship and all-in-one soundbar, Samsung has debuted a duet of Wi-Fi-enabled smart speakers."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/why-2026-could-become-defining-year-for-consumer-ai-startups/articleshow/126255214.cms",
+        "title": "Why 2026 could become defining year for consumer AI startups",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/why-2026-could-become-defining-year-for-consumer-ai-startups/articleshow/126255214.cms",
+        "published": "Tue, 30 Dec 2025 20:47:50 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Even as AI titans like ChatGPT and Gemini move toward consolidation, investors believe that consumer AI startups still have a meaningful opportunity ahead. This opportunity lies in building opinionated, standalone products that solve specific user needs\u2014something that large AI labs have yet to achieve."
     }
 ]
