📚 Auto-update: News data refreshed - 2025-12-30 17:13 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -33430,5 +33430,69 @@
         "published": "Tue, 30 Dec 2025 20:47:50 +0530",
         "source": "Tech-Economic Times",
         "summary": "Even as AI titans like ChatGPT and Gemini move toward consolidation, investors believe that consumer AI startups still have a meaningful opportunity ahead. This opportunity lies in building opinionated, standalone products that solve specific user needs\u2014something that large AI labs have yet to achieve."
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/30/12-investors-dish-on-what-2026-will-bring-for-climate-tech/",
+        "title": "12 investors dish on what 2026 will bring for climate tech",
+        "link": "https://techcrunch.com/2025/12/30/12-investors-dish-on-what-2026-will-bring-for-climate-tech/",
+        "published": "Tue, 30 Dec 2025 17:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "After a tumultuous year, venture investors are still optimistic about climate tech's long term prospects, especially as data centers continue to drive demand for electricity, manufacturing, and materials."
+    },
+    {
+        "id": "https://www.engadget.com/deals/1password-deal-last-chance-to-save-50-percent-on-our-favorite-password-manager-162844256.html?src=rss",
+        "title": "1Password deal: Last chance to save 50 percent on our favorite password manager",
+        "link": "https://www.engadget.com/deals/1password-deal-last-chance-to-save-50-percent-on-our-favorite-password-manager-162844256.html?src=rss",
+        "published": "Tue, 30 Dec 2025 16:43:08 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>If cleaning up your digital life is on your New Year's resolution list, we've got good news: 1Password is offering <a class=\"no-affiliate-link\" href=\"https://www.jdoqocy.com/click-100230748-17201697?sid=us-engadget\">half off its subscription plans</a> (both the Individual and Families plans). That brings the price of the Individual plan down to $24 for a year and the Families plan down to $36 for a year.&nbsp;</p>\n<p>The plans are nearly identical, but the Families plan accommodates five addi"
+    },
+    {
+        "id": "https://blog.sciencemuseumgroup.org.uk/the-legacy-of-undersea-cables/",
+        "title": "The Legacy of Undersea Cables",
+        "link": "https://blog.sciencemuseumgroup.org.uk/the-legacy-of-undersea-cables/",
+        "published": "Tue, 30 Dec 2025 14:49:38 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46433832\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/rhino-linux-vs-endeavoros/",
+        "title": "Rhino Linux vs EndeavorOS: Which rolling release distro should you choose?",
+        "link": "https://www.zdnet.com/article/rhino-linux-vs-endeavoros/",
+        "published": "Tue, 30 Dec 2025 17:04:46 GMT",
+        "source": "Latest news",
+        "summary": "Two user-friendly Linux distributions with two very different bases. Here's how to decide between them."
+    },
+    {
+        "id": "https://www.zdnet.com/article/how-much-ram-does-your-linux-need-2025/",
+        "title": "How much RAM does your Linux PC actually need in 2025? An expert weighs in",
+        "link": "https://www.zdnet.com/article/how-much-ram-does-your-linux-need-2025/",
+        "published": "Tue, 30 Dec 2025 16:40:00 GMT",
+        "source": "Latest news",
+        "summary": "Don't settle for the minimum - this is the RAM Linux needs to perform at its best."
+    },
+    {
+        "id": "https://www.zdnet.com/article/logitech-zone-wireless-2-es-review/",
+        "title": "These are hands-down the most comfortable headphones I've used, but that's not their best feature",
+        "link": "https://www.zdnet.com/article/logitech-zone-wireless-2-es-review/",
+        "published": "Tue, 30 Dec 2025 16:37:00 GMT",
+        "source": "Latest news",
+        "summary": "Logitech's Zone Wireless 2 ES tones down the noisy office with some impressive ANC."
+    },
+    {
+        "id": "https://www.zdnet.com/article/samsung-brain-health-dementia-tracking/",
+        "title": "Samsung's rumored 'Brain Health' feature could alert you to early signs of dementia. Here's how",
+        "link": "https://www.zdnet.com/article/samsung-brain-health-dementia-tracking/",
+        "published": "Tue, 30 Dec 2025 16:31:00 GMT",
+        "source": "Latest news",
+        "summary": "Rumors suggest that the tech giant will unveil the new health tracking feature at CES 2026."
+    },
+    {
+        "id": "https://www.zdnet.com/article/programming-transformation-ai-rust-c-linux-windows/",
+        "title": "The great programming transformation: How AI and Rust are quietly dethroning C in Linux - and Windows",
+        "link": "https://www.zdnet.com/article/programming-transformation-ai-rust-c-linux-windows/",
+        "published": "Tue, 30 Dec 2025 16:24:30 GMT",
+        "source": "Latest news",
+        "summary": "Microsoft is far more aggressive about Rust adoption than Linux."
     }
 ]
